# machine

./: .gitignore  biome.json  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: lint-js.yml  lint-rs.yml
src/: rustInterface.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/components/: RoundedButton.tsx
